--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "tsx index.ts"
   },
   "dependencies": {
+    "jimp": "^0.22.10",
     "openai": "^4.17.0",
     "playwright": "^1.39.0",
     "tsx": "^3.14.0",
