--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "jimp": "^0.22.10",
     "openai": "^4.17.0",
     "playwright": "^1.39.0",
+    "sanitize-html": "^2.11.0",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/sanitize-html": "^2.9.5"
   }
 }
