--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "start": "tsx index.ts"
   },
   "dependencies": {
+    "@anatine/zod-openapi": "^2.2.2",
     "jimp": "^0.22.10",
     "openai": "^4.17.0",
     "playwright": "^1.39.0",
     "sanitize-html": "^2.11.0",
+    "serialize-error": "^11.0.3",
     "tsx": "^3.14.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/sanitize-html": "^2.9.5"
